# ultimate-rust-as-a-service

./: Cargo.toml
src/: main.rs
src/http_server/: Cargo.toml
src/http_server/src/: main.rs
src/http_server_external_requests/: Cargo.toml
src/http_server_external_requests/src/: main.rs
src/http_server_multiple_states/: Cargo.toml
src/http_server_multiple_states/src/: main.rs
src/http_server_mutable_state/: Cargo.toml
src/http_server_mutable_state/src/: main.rs
src/http_server_nested_routers/: Cargo.toml
src/http_server_nested_routers/src/: main.rs
src/http_server_nested_routers_with_state/: Cargo.toml
src/http_server_nested_routers_with_state/src/: main.rs
src/http_server_request_authentication/: Cargo.toml
src/http_server_request_authentication/src/: main.rs
src/http_server_request_authentication2/: Cargo.toml
src/http_server_request_authentication2/src/: main.rs
src/http_server_state/: Cargo.toml
src/http_server_state/src/: main.rs
src/http_server_static_status_code/: Cargo.toml
src/http_server_static_status_code/src/: main.rs
src/http_server_status_code/: Cargo.toml
src/http_server_status_code/src/: main.rs
src/static_content/: Cargo.toml
src/static_content/src/: main.rs
