[package]
name = "top_level"
version = "0.1.0"
edition = "2024"

[dependencies]

[workspace]
members = [
    "src/http_server",
    "src/http_server_state",
    "src/http_server_mutable_state",
    "src/http_server_multiple_states",
    "src/http_server_nested_routers",
    "src/http_server_nested_routers_with_state",
    "src/http_server_external_requests",
    "src/http_server_static_status_code",
]
